# wedding_website

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  wedding_config.example.json
.github/workflows/: ci_hello_world.yaml  ci_pre_commit_check.yaml
content/: details.example.md
static/: style.css
templates/: admin.html  details.html  index.html  layout.html  login.html  post_rsvp.html  rsvp.html
