[project]
name = "wedding-website"
version = "0.1.0"
description = "L&I project: Web development, Github actions. Website for wedding."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.1",
    "ty>=0.0.13",
]
